fix player page pill tabs overlapping mobile nav

--- a/static/src/scss/components/_navigation.scss
+++ b/static/src/scss/components/_navigation.scss
@@ -104,6 +104,7 @@
 
   .nav__list {
     position: absolute;
+    z-index: 9999;
     top: 9vh;
     left: 0px;
     padding-left: 0px;
